# ISML

./: .clang-format  .clang-tidy  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
docs/: .gitignore  CMakeLists.txt  Doxyfile
examples/: CMakeLists.txt
examples/custom_serializer/include/isml/serialization/serializers/: json_serializer.hpp
examples/custom_serializer/src/: CMakeLists.txt  main.cpp
include/isml/: base_types.hpp  exceptions.hpp  messaging_service.hpp  platform.hpp
include/isml/base/: base_types.hpp  byte.hpp  concepts.hpp  listenable.hpp  maybe.hpp  result.hpp  type_traits.hpp
include/isml/executors/: thread_pool_task_executor.hpp
include/isml/io/: format.hpp  json.hpp  json_utils.hpp  serializable.hpp
include/isml/message/: exceptions.hpp  message.hpp  message_channel.hpp  message_controller.hpp  message_descriptor.hpp  message_dispatcher.hpp  message_factory.hpp  message_filter.hpp  message_filter_chain.hpp  message_queue.hpp
include/isml/message/channels/: pubsub_message_channel.hpp  subscribable_channel.hpp
include/isml/message/field/: field.hpp  field_descriptor.hpp  field_set.hpp  value_field.hpp  value_field_descriptor.hpp
include/isml/message/filters/: rule_based_message_filter.hpp
include/isml/misc/: macros.hpp
include/isml/net/: url.hpp  url_builder.hpp
include/isml/serialization/: serializable.hpp  serialization_context.hpp  serialization_utility.hpp  serializer_traits.hpp
include/isml/serialization/serializers/: binary_serializer.hpp  composite_serializer.hpp
include/isml/service/: service.hpp  service_manager.hpp
include/isml/session/: session.hpp  session_base.hpp  session_factory.hpp  session_manager.hpp
include/isml/sys/: signal_interceptor.hpp
include/isml/task/: task.hpp  task_base.hpp  task_executor.hpp  task_scheduler.hpp
include/isml/transport/: tcp_transport.hpp  tcp_transport_factory.hpp  transport.hpp  transport_factory.hpp  transport_listener.hpp  transport_registry.hpp
include/isml/utility/: deferred_call.hpp  guard.hpp  handler_mapping.hpp  predicates.hpp  property.hpp  property_set.hpp  stream_utils.hpp  string_utils.hpp  thread_joiner.hpp  value_holder.hpp
src/: CMakeLists.txt  exceptions.cpp  isml.cpp  messaging_service.cpp
src/executors/: thread_pool_task_executor.cpp
src/message/: exceptions.cpp  message.cpp  message_channel.cpp  message_controller.cpp  message_descriptor.cpp  message_dispatcher.cpp  message_factory.cpp  message_filter_chain.cpp  message_queue.cpp
src/message/channels/: pubsub_message_channel.cpp
src/message/field/: field.cpp  field_descriptor.cpp  field_set.cpp
src/message/filters/: rule_based_message_filter.cpp
src/net/: url.cpp  url_builder.cpp
src/serialization/: serialization_context.cpp
src/service/: service.cpp  service_manager.cpp
src/session/: session.cpp  session_factory.cpp  session_manager.cpp
src/sys/: signal_interceptor.cpp
src/transport/: tcp_transport.cpp  tcp_transport_factory.cpp  transport.cpp  transport_factory.cpp  transport_registry.cpp
src/utility/: stream_utils.cpp
tests/include/isml/session/: fake_session.hpp
tests/include/isml/testing/: helpers.h
tests/include/isml/transport/: fake_transport.hpp
tests/src/: CMakeLists.txt  main.cpp  messaging_service.tests.cpp
tests/src/base/: listenable.tests.cpp
tests/src/message/: message.tests.cpp  message_descriptor.test.cpp  message_factory.test.cpp
tests/src/message/field/: field.tests.cpp
tests/src/net/: url.tests.cpp
tests/src/utility/: properties.tests.cpp
